--- a/source/lib/rbcp/CMakeLists.txt
+++ b/source/lib/rbcp/CMakeLists.txt
@@ -7,3 +7,12 @@ target_include_directories(rbcp
 
 set(LIB_PUBLIC_HEADERS rbcp.h)
 set_target_properties(rbcp PROPERTIES PUBLIC_HEADER "${LIB_PUBLIC_HEADERS}")
+
+install(TARGETS rbcp
+  EXPORT ${PROJECT_NAME}Targets
+  RUNTIME       DESTINATION bin      COMPONENT runtime
+  LIBRARY       DESTINATION lib      COMPONENT runtime
+  ARCHIVE       DESTINATION lib      COMPONENT devel
+  PUBLIC_HEADER DESTINATION include  COMPONENT devel
+  RESOURCE      DESTINATION resource COMPONENT runtime
+  )
