--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
     "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
 endif()
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 14)
 set_property(GLOBAL PROPERTY CXX_STANDARD_REQUIRED ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
@@ -58,9 +58,11 @@ endif()
 
 set(CMAKE_BUILD_RPATH_USE_ORIGIN TRUE)
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-  set(CMAKE_INSTALL_RPATH "@loader_path/../lib")
+  set(CMAKE_BUILD_RPATH "\$ORIGIN/../lib:\$ORIGIN/../extern/lib")
+  set(CMAKE_INSTALL_RPATH "@loader_path/../lib;@loader_path/../extern/lib")
 else()
-  set(CMAKE_INSTALL_RPATH "\$ORIGIN/../lib")
+  set(CMAKE_BUILD_RPATH "\$ORIGIN/../lib:\$ORIGIN/../extern/lib")
+  set(CMAKE_INSTALL_RPATH "\$ORIGIN/../lib:\$ORIGIN/../extern/lib")
 endif()
 set(CMAKE_SKIP_BUILD_RPATH  FALSE)
 set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
