--- a/source/eudaq/CMakeLists.txt
+++ b/source/eudaq/CMakeLists.txt
@@ -28,3 +28,15 @@ install(TARGETS
   RUNTIME DESTINATION bin
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib)
+
+
+
+add_executable(oldEudaqRawDump exe/oldEudaqRawDump.cxx)
+target_link_libraries(oldEudaqRawDump PRIVATE eudaq::core mycommon)
+install(TARGETS
+  oldEudaqRawDump
+  EXPORT ${PROJECT_NAME}Targets
+  RUNTIME DESTINATION bin
+  LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib)
+
