add lagecy JadeProducer

--- a/source/eudaq/legacy/CMakeLists.txt
+++ b/source/eudaq/legacy/CMakeLists.txt
@@ -3,13 +3,14 @@ if(NOT ALTEL_BUILD_EUDAQ_JADE)
   return()
 endif()
 
-aux_source_directory(./ MODULE_SRC_LEGACY)
+aux_source_directory(src MODULE_SRC_LEGACY)
 
 find_package(eudaq CONFIG
   COMPONENTS eudaq::core eudaq::lcio
   REQUIRED NO_DEFAULT_PATH)
 
-include_directories(${EUDAQ_INCLUDE_DIRS})
+
+# include_directories(${EUDAQ_INCLUDE_DIRS})
 
 list(FIND EUDAQ_LIBRARIES "eudaq_lcio" LCIO_FIND_POS)
 if(${LCIO_FIND_POS} EQUAL -1)
@@ -17,9 +18,14 @@ if(${LCIO_FIND_POS} EQUAL -1)
 endif()
 
 add_library(eudaq_module_altel_legacy SHARED ${MODULE_SRC_LEGACY})
-set_property(TARGET eudaq_module_altel_legacy PROPERTY CXX_STANDARD 14)
+set_target_properties(eudaq_module_altel_legacy PROPERTIES CXX_STANDARD 14)
+target_include_directories(eudaq_module_altel_legacy
+  PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>
+  )
 
-target_link_libraries(eudaq_module_altel_legacy eudaq::core eudaq::lcio altel-rbcp mycommon)
+target_link_libraries(eudaq_module_altel_legacy eudaq::core eudaq::lcio mycommon)
 
 install(TARGETS
   eudaq_module_altel_legacy
