--- a/source/eudaq/legacy/CMakeLists.txt
+++ b/source/eudaq/legacy/CMakeLists.txt
@@ -1,20 +1,25 @@
-option(ALTEL_BUILD_EUDAQ_JADE "build old jade raw converter?" ON)
-if(NOT ALTEL_BUILD_EUDAQ_JADE)
+option(ALTEL_BUILD_EUDAQ_MODULE_LAGECY "build lagecy eudaq module (JadeProducer and JadeRaw Converters)" ON)
+if(NOT ALTEL_BUILD_EUDAQ_MODULE_LAGECY)
   return()
 endif()
 
+message(STATUS "Module eudaq_module_altel_legacy is enabled")
+
 aux_source_directory(src MODULE_SRC_LEGACY)
 
-find_package(eudaq CONFIG
-  COMPONENTS eudaq::core eudaq::lcio
-  REQUIRED NO_DEFAULT_PATH)
+find_package(eudaq REQUIRED
+  COMPONENTS eudaq::core
+  OPTIONAL_COMPONENTS eudaq::lcio
+  CONFIG
+  PATHS ${CMAKE_INSTALL_PREFIX}
+  NO_DEFAULT_PATH
+  )
 
-
-# include_directories(${EUDAQ_INCLUDE_DIRS})
-
-list(FIND EUDAQ_LIBRARIES "eudaq_lcio" LCIO_FIND_POS)
-if(${LCIO_FIND_POS} EQUAL -1)
-  list(FILTER MODULE_SRC EXCLUDE REGEX "(.+)LCEventConverter(.+)")
+if(TARGET eudaq::lcio)
+  message(STATUS "Find eudaq::lcio, lcio converter is enabled in module eudaq_module_altel_legacy")
+else()
+  list(FILTER MODULE_SRC EXCLUDE REGEX "(.+)LCEventConverter(.+)")  
+  message(STATUS "Unable to find eudaq::lcio, lcio converter is disabled in module eudaq_module_altel_lecagy")
 endif()
 
 add_library(eudaq_module_altel_legacy SHARED ${MODULE_SRC_LEGACY})
@@ -25,7 +30,11 @@ target_include_directories(eudaq_module_altel_legacy
   $<INSTALL_INTERFACE:include>
   )
 
-target_link_libraries(eudaq_module_altel_legacy eudaq::core eudaq::lcio mycommon)
+if(TARGET eudaq::lcio)
+  target_link_libraries(eudaq_module_altel_legacy eudaq::core eudaq::lcio  mycommon)
+else()
+  target_link_libraries(eudaq_module_altel_legacy eudaq::core mycommon)
+endif()
 
 install(TARGETS
   eudaq_module_altel_legacy
