--- a/source/exe/CMakeLists.txt
+++ b/source/exe/CMakeLists.txt
@@ -20,6 +20,7 @@ endfunction()
 create_cpp_raw_string(${CMAKE_CURRENT_BINARY_DIR}/include/altel_reg_cmd_list_json.hh
   ${PROJECT_SOURCE_DIR}/source/lib/misc/altel_reg_cmd_list.json)
 
+
 add_executable(rbcp_main rbcp_main.cc)
 
 target_include_directories(rbcp_main
@@ -29,7 +30,16 @@ target_include_directories(rbcp_main
 target_link_libraries(rbcp_main PRIVATE altel-rbcp mycommon)
 
 
-install(TARGETS rbcp_main
+add_executable(tcprx_dump tcprx_dump.cc)
+
+target_include_directories(tcprx_dump
+  PRIVATE
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
+  )
+target_link_libraries(tcprx_dump PRIVATE altel-rbcp mycommon)
+
+
+install(TARGETS rbcp_main tcprx_dump
   EXPORT ${PROJECT_NAME}Targets
   RUNTIME       DESTINATION bin      COMPONENT runtime
   LIBRARY       DESTINATION lib      COMPONENT runtime
