--- a/source/eudaq/CMakeLists.txt
+++ b/source/eudaq/CMakeLists.txt
@@ -16,21 +16,45 @@ find_package(eudaq REQUIRED
   NO_DEFAULT_PATH
   )
 
+aux_source_directory(src MODULE_SRC_NONE_LCIO)
+list(FILTER MODULE_SRC_NONE_LCIO EXCLUDE REGEX "(.+)LCEventConverter(.+)")
+add_library(eudaq_module_altel_none_lcio OBJECT ${MODULE_SRC_NONE_LCIO})
+target_include_directories(eudaq_module_altel_none_lcio
+  PRIVATE
+  $<TARGET_PROPERTY:eudaq::core,INTERFACE_INCLUDE_DIRECTORIES>
+  $<TARGET_PROPERTY:altel-rbcp,INTERFACE_INCLUDE_DIRECTORIES>
+  $<TARGET_PROPERTY:mycommon,INTERFACE_INCLUDE_DIRECTORIES>
+)
+
 if(TARGET eudaq::lcio)
   message(STATUS "Find eudaq::lcio, lcio converter is enabled in module eudaq_module_altel")
+  aux_source_directory(src MODULE_SRC_LCIO)
+  list(FILTER MODULE_SRC_LCIO INCLUDE REGEX "(.+)LCEventConverter(.+)")
+  # list(LENGTH   MODULE_SRC_LCIO    LEN_MODULE_SRC_LCIO)
+  add_library(eudaq_module_altel_lcio OBJECT ${MODULE_SRC_LCIO})
+  set_target_properties(eudaq_module_altel_lcio PROPERTIES CXX_STANDARD 14)
+  target_include_directories(eudaq_module_altel_lcio
+    PRIVATE
+    $<TARGET_PROPERTY:eudaq::core,INTERFACE_INCLUDE_DIRECTORIES>
+    $<TARGET_PROPERTY:eudaq::lcio,INTERFACE_INCLUDE_DIRECTORIES>
+    $<TARGET_PROPERTY:altel-rbcp,INTERFACE_INCLUDE_DIRECTORIES>
+    $<TARGET_PROPERTY:mycommon,INTERFACE_INCLUDE_DIRECTORIES>
+    )
 else()
-  list(FILTER MODULE_SRC EXCLUDE REGEX "(.+)LCEventConverter(.+)")  
   message(STATUS "Unable to find eudaq::lcio, lcio converter is disabled in module eudaq_module_altel")
 endif()
 
-add_library(eudaq_module_altel SHARED ${MODULE_SRC})
-if(TARGET eudaq::lcio)
+if(TARGET eudaq_module_altel_lcio)
+  add_library(eudaq_module_altel SHARED
+    $<TARGET_OBJECTS:eudaq_module_altel_none_lcio>
+    $<TARGET_OBJECTS:eudaq_module_altel_lcio>)
   target_link_libraries(eudaq_module_altel eudaq::core eudaq::lcio altel-rbcp mycommon)
 else()
+  add_library(eudaq_module_altel SHARED
+    $<TARGET_OBJECTS:eudaq_module_altel_none_lcio>)
   target_link_libraries(eudaq_module_altel eudaq::core altel-rbcp mycommon)
 endif()
 
-set_target_properties(eudaq_module_altel PROPERTIES CXX_STANDARD 14)
 # set_property(TARGET eudaq_module_altel APPEND PROPERTY INSTALL_RPATH ${EUDAQ_LIBRARIES_DIRS})
 
 install(TARGETS
