remove unused files

--- a/source/common/CMakeLists.txt
+++ b/source/common/CMakeLists.txt
@@ -1,27 +1,18 @@
 add_subdirectory(linenoiseng)
 add_subdirectory(getopt)
 add_subdirectory(rapidjson)
-add_subdirectory(gte)
-add_subdirectory(base64)
-add_subdirectory(demangle)
-add_subdirectory(factory)
 
-set(CMAKE_THREAD_PREFER_PTHREAD ON)
-set(THREADS_PREFER_PTHREAD_FLAG ON)
-find_package(Threads REQUIRED)
+# set(CMAKE_THREAD_PREFER_PTHREAD ON)
+# set(THREADS_PREFER_PTHREAD_FLAG ON)
+# find_package(Threads REQUIRED)
 
 add_library(mycommon INTERFACE)
 
 target_link_libraries(mycommon INTERFACE
   ${CMAKE_DL_LIBS} #dl not sure if it works with full static
-  Threads::Threads
   linenoiseng
   getopt
   rapidjson
-  base64
-  demangle
-  factory
-  gte
   )
 
 target_include_directories(mycommon
